@@ -248,6 +248,14 @@
                             <release>8</release>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <!-- Hides warnings of mockito and jacoco usage in tests on JDK 21+ -->
+                            <argLine>${argLine} -XX:+EnableDynamicAgentLoading</argLine>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
